--- a/frontend/src/components/Events/eachevent.css
+++ b/frontend/src/components/Events/eachevent.css
@@ -29,3 +29,10 @@
     border: solid black 2px;
     border-radius: 5px;
 }
+
+.ulformine {
+    position: relative;
+    width: 80%;
+    left: 10%;
+    padding: 0;
+}
